# design-pattern

./: .gitignore  README.md
code/: Cargo.toml  Makefile  aaa.txt
code/src/: main.rs
code/src/design_pattern/creational/: 01simple_factory.rs  02factory_method.rs  03abstract_factory_method.rs
code/src/oop_design_rule/: 01srp.rs  02ocp.rs  03dip.rs  04crp.rs
docs/: 01.设计模式概述.md  02.面向对象设计原则.md  03.创建型模式.md  04.结构型模式.md  05.行为型模式.md
