[package]
name = "code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# oop_design_rule
[[bin]]
name = "01srp"
path = "src/oop_design_rule/01srp.rs"
[[bin]]
name = "02ocp"
path = "src/oop_design_rule/02ocp.rs"
[[bin]]
name = "03dip"
path = "src/oop_design_rule/03dip.rs"
[[bin]]
name = "04crp"
path = "src/oop_design_rule/04crp.rs"
# design_pattern

# creational
[[bin]]
name = "01simple_factory"
path = "src/design_pattern/creational/01simple_factory.rs"

[[bin]]
name = "02factory_method"
path = "src/design_pattern/creational/02factory_method.rs"
[[bin]]
name = "03abstract_factory_method"
path = "src/design_pattern/creational/03abstract_factory_method.rs"

[dependencies]
